{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "fefcec7a-38bc-4226-abb3-5663b81fa944",
            "actions": [
                {
                    "name": "movement",
                    "type": "Value",
                    "id": "4ea1b98e-6a4f-484f-974b-fd66ed90427c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sneak",
                    "type": "Button",
                    "id": "def1c9f4-9c50-4d1b-907a-3617394c569f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "83ebcc16-fbd0-4ac0-a97a-5cde657cf074",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fb9684fb-85f7-466e-9f7d-7f4d5b782f73",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "80f0b843-eaa5-4ee0-821f-ecbad24487ae",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ef073df0-5d86-47f7-ab26-98b1aa228718",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c6a35ec7-97a7-43cf-af07-f69982138cc4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8e8b2e8a-f71c-4b69-92bb-e07bece5146e",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sneak",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}